--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="sprites/spike.png"></script>
     <script src="sprites/grass.png"></script>
     <script src="sprites/coin.png"></script>
+    <script src="build.js"></script>
   </body>
 
   
