--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <title>game</title>
 <body>
-    <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
+    <script src="./node_modules/kaboom/dist/kaboom.mjs"></script>
     <script src="game.js"></script>
     <script src="sprites/bean.png"></script>
     <script src="sprites/portal.png"></script>
@@ -9,8 +9,7 @@
     <script src="sprites/spike.png"></script>
     <script src="sprites/grass.png"></script>
     <script src="sprites/coin.png"></script>
-    <script src="build.js"></script>
+    <script src="sprites/chest.png"></script>
+    <script src="sprites/ghost.png"></script>
   </body>
-
-  
 </html>
