--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
-    <title>game</title>
+    <title>ForZe</title>
 <body>
     <script src="./node_modules/kaboom/dist/kaboom.mjs"></script>
-    <script src="game.js"></script>
-    <script src="sprites/bean.png"></script>
-    <script src="sprites/portal.png"></script>
-    <script src="sprites/googoly.png"></script>
-    <script src="sprites/spike.png"></script>
-    <script src="sprites/grass.png"></script>
-    <script src="sprites/coin.png"></script>
-    <script src="sprites/chest.png"></script>
-    <script src="sprites/ghost.png"></script>
+    <script src="./index.js"></script>
+    <script src="./sprites/bean.png"></script>
+    <script src="./sprites/portal.png"></script>
+    <script src="./sprites/googoly.png"></script>
+    <script src="./sprites/spike.png"></script>
+    <script src="./sprites/grass.png"></script>
+    <script src="./sprites/coin.png"></script>
+    <script src="./sprites/chest.png"></script>
+    <script src="./sprites/ghost.png"></script>
+    <script src="./sprites/potion.png"></script>
   </body>
 </html>
