--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
-    <head>
-        <title>ForZe</title>
-        </head>
-        <body>
-            <script src="index.js"></script>
-            <script src="build.js"></script>
-        </body>
+    <title>ForZe</title>
+<body>
+    <script src="./node_modules/kaboom/dist/kaboom.mjs"></script>
+    <script src="./index.js"></script>
+    <script src="./sprites/bean.png"></script>
+    <script src="./sprites/portal.png"></script>
+    <script src="./sprites/googoly.png"></script>
+    <script src="./sprites/spike.png"></script>
+    <script src="./sprites/grass.png"></script>
+    <script src="./sprites/coin.png"></script>
+    <script src="./sprites/chest.png"></script>
+    <script src="./sprites/ghost.png"></script>
+    <script src="./sprites/potion.png"></script>
+    <script src="./sprites/a nice potion.png.png"></script>
+  </body>
 </html>
