--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <script src="./sprites/chest.png"></script>
     <script src="./sprites/ghost.png"></script>
     <script src="./sprites/potion.png"></script>
-    <script src="./sprites/a nice potion.png.png"></script>
+    <script src="./sprites/a nice potion.png"></script>
   </body>
 </html>
