--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="./sprites/ghost.png"></script>
     <script src="./sprites/potion.png"></script>
     <script src="./sprites/a nice potion.png"></script>
+    <script src="build.js"></script>
   </body>
 </html>
