--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>ForZe</title>
 <body>
     <script src="./node_modules/kaboom/dist/kaboom.mjs"></script>
-    <script src="./index.js" type="module"></script>
+    <script src="./index.js"></script>
     <script src="./sprites/bean.png"></script>
     <script src="./sprites/portal.png"></script>
     <script src="./sprites/googoly.png"></script>
