--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="./sprites/chest.png"></script>
     <script src="./sprites/ghost.png"></script>
     <script src="./sprites/potion.png"></script>
-    <link rel="icon" href="https://raw.githubusercontent.com/forze0912/ForZe/master/sprites/nice.png">
+    <link rel="icon" href="https://raw.githubusercontent.com/forze0912/ForZe/master/sprites/nice.icon">
     <script src="./sprites/a nice potion.png"></script>
     <script src="build.js"></script>
   </body>
