--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
+  <head>
     <title>ForZe</title>
+    <link rel="shortcut icon" type="image/png" href="sprites/favicn.png">
+    <script src="https://kit.fontawesome.com/75211564f9.js" crossorigin="anonymous"></script>
+  </head>
+
 <body>
     <script src="./node_modules/kaboom/dist/kaboom.mjs"></script>
     <script src="./index.js"></script>
@@ -12,7 +17,6 @@
     <script src="./sprites/chest.png"></script>
     <script src="./sprites/ghost.png"></script>
     <script src="./sprites/potion.png"></script>
-    <link rel="icon" href="https://raw.githubusercontent.com/forze0912/ForZe/master/sprites/nice.icon">
     <script src="./sprites/a nice potion.png"></script>
     <script src="build.js"></script>
   </body>
